kubernetes/apps/tekton-pipelines/tekton/operator/dashboard.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
spec:
  ingressClassName: internal
  rules:
    - host: "tekton.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "tekton.${SECRET_DOMAIN}"
      secretName: "${LIMITED_DOMAIN/./-}-production-tls"
